--- a/ash_aed/templates/404.html
+++ b/ash_aed/templates/404.html
@@ -1,15 +1,18 @@
 {% extends 'layout.html' %}
 {% block content %}
 <div class="container mb-5">
-  <div class="row">
-    <div class="col-md-9">
-      <h1 class="h3">404 Page Not Found.</h1>
-      <p class="alert alert-danger">お探しのページは見つかりませんでした。</p>
-      <section>
-      </section>
+    <div class="row">
+        <div class="col-md-9">
+            <section>
+                <h1 class="h3">404 Page Not Found.</h1>
+                <p class="alert alert-danger">お探しのページは見つかりませんでした。</p>
+            </section>
+            <section>
+                <p class="mt-3 text-center"><a href="/" title="トップページへ戻る">トップページへ戻る</a></p>
+            </section>
+        </div>
+        <div class="col-md-3">
+        </div>
     </div>
-    <div class="col-md-3">
-    </div>
-  </div>
 </div>
 {% endblock %}
