--- a/ash_aed/templates/error.html
+++ b/ash_aed/templates/error.html
@@ -6,7 +6,9 @@
             <section>
                 <h1 class="h4">検索条件に誤りがあります</h1>
                 <p class="alert alert-warning">{{ error_message }}</p>
-                <p><a href="/" title="旭川市AED設置場所検索">トップページへ戻る</a>
+            </section>
+            <section>
+                <p class="mt-3 text-center"><a href="/" title="旭川市AED設置場所検索">トップページへ戻る</a>
             </section>
         </div>
     </div>
