--- a/ash_aed/templates/location.html
+++ b/ash_aed/templates/location.html
@@ -7,8 +7,8 @@
             <p class="alert alert-success">旭川市ホームページのオープンデータから取得したAED設置場所の情報を表示しています。</p>
             <section>
                 <table class="table table-striped table-bordered table-hover">
-                    <tbody>
-                        <tr>
+                    <tbody id="results" data-length="1">
+                        <tr id="order1" data-latitude="{{ result.latitude|tojson }}" data-longitude="{{ result.longitude|tojson }}" data-name="{{ result.location_name|safe }}">
                             <th>事業所名</th>
                             <td>{{ result.location_name }}</td>
                         </tr>
@@ -32,7 +32,10 @@
                 </table>
             </section>
             <section>
-                <div id="mapid" data-latitude="{{ result.latitude|tojson }}" data-longitude="{{ result.longitude|tojson }}" data-pointname="{{ result.location_name|safe }}" class="mb-3"></div>
+                <div id="mapid" class="mb-3"></div>
+            </section>
+            <section>
+                <p class="mt-3 text-center"><a href="/" title="旭川市AED設置場所検索">トップページへ戻る</a>
             </section>
         </div>
         <div class="col-md-4">
