--- a/ash_aed/templates/search_by_gps.html
+++ b/ash_aed/templates/search_by_gps.html
@@ -15,9 +15,9 @@
                             <th>現在地からの距離</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="results" data-length="{{ results_length|tojson }}">
                         {% for result in search_results %}
-                        <tr id="order{{ result['order'] }}" data-latitude="{{ result['location'].latitude|tojson }}" data-longitude="{{ result['location'].longitude|tojson }}" data-pointname="{{ result['location'].location_name|safe }}">
+                        <tr id="order{{ result['order'] }}" data-latitude="{{ result['location'].latitude|tojson }}" data-longitude="{{ result['location'].longitude|tojson }}" data-name="{{ result['location'].location_name|safe }}">
                             <td>{{ result['order'] }}</td>
                             <td><a href="/location/{{ result['location'].location_id }}" title="{{ result['location'].location_name }}の詳細へ">{{ result['location'].location_name }}</a></td>
                             <td>{{ result['location'].address }}</td>
@@ -29,6 +29,9 @@
             </section>
             <section>
                 <div id="mapid" data-currentlat="{{ current_latitude|tojson }}" data-currentlong="{{ current_longitude|tojson }}"></div>
+            </section>
+            <section>
+                <p class="mt-3 text-center"><a href="/" title="旭川市AED設置場所検索">トップページへ戻る</a>
             </section>
         </div>
     </div>
