--- a/ash_aed/templates/search_by_location_name.html
+++ b/ash_aed/templates/search_by_location_name.html
@@ -11,8 +11,6 @@
                         <tr>
                             <th>事業所名</th>
                             <th>住所</th>
-                            <th>電話番号</th>
-                            <th>利用可能時間</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -20,8 +18,6 @@
                         <tr>
                             <td><a href="/location/{{ result.location_id }}" title="{{ result.location_name }}の詳細へ">{{ result.location_name }}</a></td>
                             <td>{{ result.address }}</td>
-                            <td>{{ result.phone_number }}</td>
-                            <td>{{ result.available_time }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -30,9 +26,11 @@
             {% else %}
             <section>
                 <p class="alert alert-danger my-3">AED設置場所が見つかりませんでした...</p>
-                <p><a href="/" title="トップページへ戻る">トップページへ戻る</a></p>
             </section>
             {% endif %}
+            <section>
+                <p class="mt-3 text-center"><a href="/" title="旭川市AED設置場所検索">トップページへ戻る</a>
+            </section>
         </div>
     </div>
 </div>
