検索結果が10件を超えた場合にページを分割する処理を追加。

--- a/ash_aed/templates/index.html
+++ b/ash_aed/templates/index.html
@@ -24,7 +24,7 @@
             </section>
             <section>
                 <p>または、</p>
-                <form class="form mb-4" action="/search_by_location_name" method="GET">
+                <form class="form mb-4" action="/find_by_location_name" method="GET">
                     <div class="form-group">
                         <label class="h5 text-secondary" for="location_name">AED設置場所名を入力</label>
                         <input class="form-control" type="text" name="location_name" value="" placeholder="例）花咲スポーツ公園">
