--- a/ash_aed/templates/404.html
+++ b/ash_aed/templates/404.html
@@ -1,18 +1,11 @@
 {% extends 'layout.html' %}
 {% block content %}
-<div class="container mb-5">
-    <div class="row">
-        <div class="col-md-9">
-            <section>
-                <h1 class="h3">404 Page Not Found.</h1>
-                <p class="alert alert-danger">お探しのページは見つかりませんでした。</p>
-            </section>
-            <section>
-                <p class="mt-3 text-center"><a href="/" title="トップページへ戻る">トップページへ戻る</a></p>
-            </section>
-        </div>
-        <div class="col-md-3">
-        </div>
+<article>
+    <div class="container">
+        <section>
+            <h1 class="h3">404 Page Not Found.</h1>
+            <p class="alert alert-danger">お探しのページは見つかりませんでした。</p>
+        </section>
     </div>
-</div>
+</article>
 {% endblock %}
