--- a/ash_aed/templates/area.html
+++ b/ash_aed/templates/area.html
@@ -1,35 +1,30 @@
 {% extends 'layout.html' %}
 {% block content %}
-<div class="container mb-5">
-    <div class="row">
-        <div class="col-md-12">
-            <h1 class="h4 mb-3">旭川市「{{ area_name }}」のAED設置場所</h3>
-            <section>
-                <table class="table table-striped table-bordered table-hover">
-                    <thead>
-                        <tr>
-                            <th>事業所名</th>
-                            <th>住所</th>
-                        </tr>
-                    </thead>
-                    <tbody id="results" data-length="{{ results_length|tojson }}">
-                        {% for result in search_results %}
-                        <tr id="order{{ loop.index }}" data-latitude="{{ result.latitude|tojson }}" data-longitude="{{ result.longitude|tojson }}" data-name="{{ result.location_name|safe }}">
-                            <td><a href="/location/{{ result.location_id }}" title="{{ result.location_name }}の詳細へ">{{ result.location_name }}</a></td>
-                            <td>{{ result.address }}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </section>
-            <section>
-                <div id="mapid" class="mb-3"></div>
-            </section>
-            <section>
-                <p class="mt-3 text-center"><a href="/" title="トップページへ戻る">トップページへ戻る</a></p>
-            </section>
-        </div>
+<article>
+    <div class="container">
+        <h1 class="h4 mb-3">旭川市「{{ area_name }}」のAED設置場所</h3>
+        <section>
+            <table class="table table-striped table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th>事業所名</th>
+                        <th>住所</th>
+                    </tr>
+                </thead>
+                <tbody id="results" data-length="{{ results_length|tojson }}">
+                    {% for result in search_results %}
+                    <tr id="order{{ loop.index }}" data-latitude="{{ result.latitude|tojson }}" data-longitude="{{ result.longitude|tojson }}" data-name="{{ result.location_name|safe }}">
+                        <td><a href="/location/{{ result.location_id }}" title="{{ result.location_name }}の詳細へ">{{ result.location_name }}</a></td>
+                        <td>{{ result.address }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <div id="mapid" class="mb-3"></div>
+        </section>
     </div>
-</div>
+</article>
 <script charset="utf-8" src="{{ url_for('static', filename='js/show_map.js') }}"></script>
 {% endblock %}
