--- a/ash_aed/templates/location.html
+++ b/ash_aed/templates/location.html
@@ -1,51 +1,54 @@
 {% extends 'layout.html' %}
 {% block content %}
-<div class="container mb-5">
-    <div class="row">
-        <div class="col-md-8">
-            <h1 class="h4 mb-3">AED設置場所「{{ result.location_name }}」の情報</h3>
-            <p class="alert alert-success">旭川市ホームページのオープンデータから取得したAED設置場所の情報を表示しています。</p>
-            <section>
-                <table class="table table-striped table-bordered table-hover">
-                    <tbody id="results" data-length="1">
-                        <tr id="order1" data-latitude="{{ result.latitude|tojson }}" data-longitude="{{ result.longitude|tojson }}" data-name="{{ result.location_name|safe }}">
-                            <th>事業所名</th>
-                            <td>{{ result.location_name }}</td>
-                        </tr>
-                        <tr>
-                            <th>AED設置場所</th>
-                            <td>{{ result.installation_floor }}</td>
-                        </tr>
-                        <tr>
-                            <th>住所</th>
-                            <td>{{ result.address }}</td>
-                        </tr>
-                        <tr>
-                            <th>電話番号</th>
-                            <td>{{ result.phone_number }}</td>
-                        </tr>
-                        <tr>
-                            <th>利用可能時間</th>
-                            <td>{{ result.available_time }}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </section>
-            <section>
-                <div id="mapid" class="mb-3"></div>
-            </section>
-            <section>
-                <p class="mt-3 text-center"><a href="/" title="旭川市AED設置場所検索">トップページへ戻る</a>
-            </section>
-        </div>
-        <div class="col-md-4">
-            <section>
-                <h2 class="h5">GoogleマップでAED設置場所までの経路を探す</h2>
-                <p>以下のリンクからGoogleマップで{{ result.location_name }}までの経路を検索できます。（外部サイトへ移動）</p>
-                <p><a href="https://www.google.com/maps/search/?api=1&query={{ result.latitude }},{{ result.longitude }}" class="btn btn-primary" title="Googleマップで開く">Googleマップで経路を探す</a></p>
-            </section>
+<article>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <h1 class="h4 mb-3">AED設置場所「{{ result.location_name }}」の情報</h3>
+                <p class="alert alert-success">旭川市ホームページのオープンデータから取得したAED設置場所の情報を表示しています。</p>
+                <section>
+                    <table class="table table-striped table-bordered table-hover">
+                        <tbody id="results" data-length="1">
+                            <tr id="order1" data-latitude="{{ result.latitude|tojson }}" data-longitude="{{ result.longitude|tojson }}" data-name="{{ result.location_name|safe }}">
+                                <th>事業所名</th>
+                                <td>{{ result.location_name }}</td>
+                            </tr>
+                            <tr>
+                                <th>AED設置場所</th>
+                                <td>{{ result.installation_floor }}</td>
+                            </tr>
+                            <tr>
+                                <th>住所</th>
+                                <td>{{ result.address }}</td>
+                            </tr>
+                            <tr>
+                                <th>電話番号</th>
+                                <td>{{ result.phone_number }}</td>
+                            </tr>
+                            <tr>
+                                <th>利用可能時間</th>
+                                <td>{{ result.available_time }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
+                <section>
+                    <div id="mapid" class="mb-3"></div>
+                </section>
+             </div>
+            <div class="col-md-4">
+                <section>
+                    <div class="card">
+                        <h2 class="h5 card-header">GoogleマップでAED設置場所までの経路を探す</h2>
+                        <div class="card-body">
+                            <p>以下のリンクからGoogleマップで{{ result.location_name }}までの経路を検索できます。（外部サイトへ移動）</p>
+                            <p><a href="https://www.google.com/maps/search/?api=1&query={{ result.latitude }},{{ result.longitude }}" class="btn btn-primary" title="Googleマップで開く">Googleマップで経路を探す</a></p>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </div>
-</div>
+</article>
 <script charset="utf-8" src="{{ url_for('static', filename='js/show_map.js') }}"></script>
 {% endblock %}
