--- a/ash_aed/templates/layout.html
+++ b/ash_aed/templates/layout.html
@@ -9,7 +9,7 @@
         <!-- Make sure you put this AFTER Leaflet's CSS -->
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
         <script src="https://kit.fontawesome.com/af6896cda7.js" crossorigin="anonymous"></script>
-        <title>{{ title }} - 旭川市AED設置場所検索</title>
+        <title>旭川市AED設置場所検索 | {{ title }}</title>
     </head>
     <body>
         <header>
