--- a/ash_aed/templates/layout.html
+++ b/ash_aed/templates/layout.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="twitter:card" content="summary">
+        <meta property="og:url" content="https://ashaed.herokuapp.com/">
+        <meta property="og:title" content="旭川市AED設置場所検索">
+        <meta property="og:description" content="旭川市ホームページのAED設置事業所一覧オープンデータから、旭川市のAED設置場所を検索できます。位置情報を使えば現在地から近いAED設置場所を探すこともできます。">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/show_map.css') }}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="">
